--- a/CentralAuthServer.API/CentralAuthServer.API.csproj
+++ b/CentralAuthServer.API/CentralAuthServer.API.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CentralAuthServer.Infrastructure\CentralAuthServer.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
