--- a/CentralAuthServer.API/appsettings.json
+++ b/CentralAuthServer.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\sqlexpress;Database=CentralAuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "sk-test_9f8a7b2d1c3e4f5a6b7c8d9e0f1a2b3c",
+    "Issuer": "CentralAuthServer",
+    "Audience": "CentralAuthClient"
+  },
   "AllowedHosts": "*"
 }
