--- a/CentralAuthServer.API/CentralAuthServer.API.csproj
+++ b/CentralAuthServer.API/CentralAuthServer.API.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CentralAuthServer.Core\CentralAuthServer.Core.csproj" />
     <ProjectReference Include="..\CentralAuthServer.Infrastructure\CentralAuthServer.Infrastructure.csproj" />
   </ItemGroup>
 
