--- a/CentralAuthServer.Infrastructure/CentralAuthServer.Infrastructure.csproj
+++ b/CentralAuthServer.Infrastructure/CentralAuthServer.Infrastructure.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CentralAuthServer.Core\CentralAuthServer.Core.csproj" />
+  </ItemGroup>
+
 </Project>
