--- a/CentralAuthServer.API/appsettings.Development.json
+++ b/CentralAuthServer.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "Frontend": {
+    "BaseUrl": "http://localhost:3000"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
