Google Login, Facebook Login, Microsoft Login

--- a/CentralAuthServer.API/appsettings.json
+++ b/CentralAuthServer.API/appsettings.json
@@ -13,5 +13,20 @@
     "Issuer": "CentralAuthServer",
     "Audience": "CentralAuthClient"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "...",
+      "ClientSecret": "..."
+    },
+    "Facebook": {
+      "AppId": "your-fb-app-id",
+      "AppSecret": "your-fb-secret"
+    },
+    "Microsoft": {
+      "ClientId": "your-ms-client-id",
+      "ClientSecret": "your-ms-secret",
+      "Tenant": "common"
+    }
+  }
 }
