--- a/CentralAuthServer.API/CentralAuthServer.API.csproj
+++ b/CentralAuthServer.API/CentralAuthServer.API.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CentralAuthServer.Application\CentralAuthServer.Application.csproj" />
     <ProjectReference Include="..\CentralAuthServer.Core\CentralAuthServer.Core.csproj" />
     <ProjectReference Include="..\CentralAuthServer.Infrastructure\CentralAuthServer.Infrastructure.csproj" />
   </ItemGroup>
