--- a/CentralAuthServer.Application/CentralAuthServer.Application.csproj
+++ b/CentralAuthServer.Application/CentralAuthServer.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CentralAuthServer.Infrastructure\CentralAuthServer.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
